2002-11-16  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_la_SOURCES): added intl.h
	(AM_CPPFLAGS): added locale dir.
	(autotrace_LDADD): added INTLLIBS.
	(ACLOCAL_AMFLAGS): Added -I m4.

	* acconfig.h: added PACKAGE and VERSION.

	* autotrace.c (autotrace_init): New function.
	(at_fitting_opts_doc_func): New function.

	* autotrace.h (autotrace_init): New function.
	(at_fitting_opts_doc): call at_fitting_opts_doc_func.
	(at_fitting_opts_doc_func): New function.

	* configure.in: remove AUTOTRACE_ prefix from version
	number related variable names.
	use DEFINE_UNQOTED macro instead of SUBST marco.
	(AM_GNU_GETTEXT): Gettextiz'ed.
	(AC_OUTPUT): intl/Makefile and po/Makefile.in are added.
	
	* main.c: include intl.h and locale.h.
	(main): set locale.
	put _() to C strings.

2002-11-15  Martin Weber <martweb@gmx.net>

	* autotrace.c, fit.c, input-tga.c,
	output-cgm.c, output-dr2d.c, output-dxf.c,
	output-fig.c, outputp2e.c, pxl-outline.c:
	Fixed compilation errors and warnings for certain C compilers.

	* output-pstoedit.h: Fixed compilation errors with Visual C++.

	* output.c: Removed unnecessary streq.

2002-11-15  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (enum _at_msg_type): Added
	AT_MSG_NOT_SET.

	* exception.c (at_exception_got_fatal): 
	return true or false explicitly.
	(at_exception_new): Don't use GCC C extension.

	Suggested by Nelson H. F. Beebe <beebe@math.utah.edu>.

2002-11-12  Masatake YAMATO  <yamato@redhat.com>

	* strgicmp.c (strgnicmp): Fix a typo.

2002-11-10  Martin Weber <martweb@gmx.net>

	* strgicmp.c (strgnicmp): Use size_t instead of
	  long to avoid warnings from compilers.

	Message-ID: <3DCCD9C3.9737E7C4@gmx.net>.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (at_doc__width_weight_factor): Updated.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: version 0.31.1.
	echo building configuration at the
	end of configure.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>
